# SILVIA

./: .gitignore  LICENSE  README.md  build_pass.sh  giovanni.cpp  giovanni.h  install_llvm.sh  setup.sh  time.patch
benchmarks/GSM/: run_hls.tcl
benchmarks/MV/: run_hls.tcl
benchmarks/SNN/: run_hls.tcl
benchmarks/scal/: run_hls.tcl
blackbox/: dsp_add_4simd_pipe_l0.json  dsp_add_4simd_pipe_l0.v  dsp_add_simd.cc  dsp_add_simd.g.bc  dsp_add_simd.h  giovanni.v
blackbox/add4simd/: add4simd.cpp  add4simd.h  add4simd.json  add4simd.v
blackbox/dotprod/: dotprod.cpp  dotprod.h  dotprod.json  dotprod.v
blackbox/dotprod_x7/: dotprod_x7.cpp  dotprod_x7.h  dotprod_x7.json  dotprod_x7.v  dsp_muladd2simd.v
blackbox/doubleMAC/: doubleMAC.cpp  doubleMAC.h  doubleMAC.json  (+1 more)
lib/: CMakeLists.txt  Makefile  SIMDAdd.cpp
lib/BBToDot/: BBToDot.cpp
lib/SILVIA/: CMakeLists.txt
lib/SILVIAAdd/: SILVIAAdd.cpp
lib/SILVIAMul/: CMakeLists.txt  SILVIAMul.cpp
lib/SILVIAMuladd/: CMakeLists.txt  SILVIAMuladd.cpp
lib/SIMDAdd/: CMakeLists.txt  SIMDAdd.cpp
llvm-3.1/: build_pass.sh
llvm-3.1/lib/: CMakeLists.txt
llvm-3.1/lib/BBToDot/: CMakeLists.txt
llvm-3.1/lib/DotProdize/: CMakeLists.txt  DotProdize.cpp
llvm-3.1/lib/SILVIA/: SILVIA.cpp  SILVIA.h
llvm-3.1/lib/SILVIAAdd/: CMakeLists.txt  SILVIAAdd.cpp
llvm-3.1/lib/SILVIAMul/: SILVIAMul.cpp
llvm-3.1/lib/SILVIAMuladd/: SILVIAMuladd.cpp
llvm-3.1/lib/SIMDAdd/: SIMDAdd.cpp
llvm-3.9/: setup_hls_llvm.sh
scripts/: SILVIA.tcl  csynth_design_simd.tcl  safe_link.sh
test/: hls_example.cpp  run_hls.tcl  run_hls_3.1.tcl
(+209 files in other folders)
